--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 /* Color Palette : #EE05F2 #BC04BF #7C038C #380140 #220126 */
 
 :root {
-  --bg: #380140;
-  --card: #0b1220;
+  --bg: #220126;
+  --card: #380140;
   --muted: #BC04BF;
-  --accent: #3b82f6;
+  --accent: #7C038C;
 }
 
 html, body {
@@ -68,7 +68,7 @@ select {
 }
 
 .card {
-  background: #BC04BF;
+  background: #7C038C;
   border-radius: 12px;
   padding: 10px;
   box-shadow: 0 6px 20px rgba(2, 6, 23, 0.6);
@@ -132,7 +132,7 @@ select {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background: black;
+  background: #220126;
   padding: 0;
 }
 
